--- a/src/app/component/view-employees/view-employees.component.html
+++ b/src/app/component/view-employees/view-employees.component.html
@@ -1,45 +1,45 @@
 <div class="card">
     <div class="card-header">
-      <h4>Employee List</h4>
+        <h4>Employee List</h4>
     </div>
     <div class="card-body">
-      <div *ngIf="isLoading" class="text-center">
-        <div class="spinner-border text-primary" role="status">
-          <span class="sr-only">Loading...</span>
+        <div *ngIf="isLoading" class="text-center">
+            <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
         </div>
-      </div>
-      <div *ngIf="!isLoading">
-        <table class="table table-striped table-bordered">
-          <thead class="thead-dark">
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Department</th>
-              <th>Created At</th>
-              <th>Updated At</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let employee of employees">
-              <td>{{ employee.id }}</td>
-              <td>{{ employee.name }}</td>
-              <td>{{ employee.email }}</td>
-              <td>{{ employee.department }}</td>
-              <td>{{ employee.createdAt | date:'medium' }}</td>
-              <td>{{ employee.updatedAt | date:'medium' }}</td>
-              <td>
-                <button class="btn btn-primary btn-sm mr-2" (click)="editEmployee(employee.id!)">
-                  <i class="fa fa-edit"></i> Edit
-                </button>
-                <button class="btn btn-danger btn-sm" (click)="deleteEmployee(employee.id!)">
-                  <i class="fa fa-trash"></i> Delete
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+        <div *ngIf="!isLoading">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Department</th>
+                        <th>Created At</th>
+                        <th>Updated At</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let employee of employees">
+                        <td>{{ employee.id }}</td>
+                        <td>{{ employee.name }}</td>
+                        <td>{{ employee.email }}</td>
+                        <td>{{ employee.department }}</td>
+                        <td>{{ employee.createdAt }}</td>
+                        <td>{{ employee.updatedAt }}</td>
+                        <td>
+                            <button class="btn btn-primary btn-sm mr-2" (click)="editEmployee(employee.id!)">
+                                <i class="fa fa-edit"></i> Edit
+                            </button>
+                            <button class="btn btn-danger btn-sm" (click)="deleteEmployee(employee.id!)">
+                                <i class="fa fa-trash"></i> Delete
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
+</div>
