--- a/src/app/component/update-employee/update-employee.component.html
+++ b/src/app/component/update-employee/update-employee.component.html
@@ -36,7 +36,7 @@
         </div>
         
         <button type="submit" class="btn btn-primary" [disabled]="!employeeForm.valid">Update</button>
-        <button type="button" class="btn btn-secondary ml-2" (click)="router.navigate(['/view'])">Cancel</button>
+        <!-- <button type="button" class="btn btn-secondary ml-2" (click)="router.navigate(['/view'])">Cancel</button> -->
       </form>
     </div>
   </div>
