--- a/src/app/component/employee-form/employee-form.component.html
+++ b/src/app/component/employee-form/employee-form.component.html
@@ -1,5 +1,5 @@
 <div class="container my-4">
-    <h2>{{ isEditMode ? 'Edit Employee' : 'Add Employee' }}</h2>
+    <h2>{{ isEditMode ? 'Update Employee' : 'Add Employee' }}</h2>
     <form (ngSubmit)="saveEmployee()">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
